contact form and static pages content + style adaptations

--- a/.env
+++ b/.env
@@ -37,5 +37,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://contact%40lapinou.tech:d%5EcryQ%24znBU%245YFQrdD3@smtp.hostinger.com:465
 ###< symfony/mailer ###
