--- a/compose.yaml
+++ b/compose.yaml
@@ -1,21 +1,20 @@
 version: '3'
 
-services:
-###> doctrine/doctrine-bundle ###
+services: 
   database:
-    image: postgres:${POSTGRES_VERSION:-16}-alpine
+    image: 'mysql:latest'
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
-    volumes:
-      - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: teachinghub
+    restart: always
+    ports:
+      - '3306'
 
-volumes:
-###> doctrine/doctrine-bundle ###
-  database_data:
-###< doctrine/doctrine-bundle ###
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      PMA_HOST: database
+      PMA_PORT: 3306
+    restart: always
+    ports:
+      - 8080:80
