--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,10 +16,11 @@ security:
     main:
       lazy: true
       provider: app_user_provider
-      form_login:
-        login_path: app_login
-        check_path: app_login
-        enable_csrf: true
+      custom_authenticator: App\Security\UserAuthenticator
+      # form_login:
+      #   login_path: app_login
+      #   check_path: app_login
+      #   enable_csrf: true
       remember_me:
         secret: "%kernel.secret%"
         lifetime: 31449600 #1 year
