--- a/composer.json
+++ b/composer.json
@@ -44,8 +44,9 @@
         "symfony/yaml": "7.0.*",
         "symfonycasts/reset-password-bundle": "^1.20",
         "symfonycasts/verify-email-bundle": "^1.16",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/extra-bundle": "^3.8",
         "twig/intl-extra": "^3.8",
+        "twig/string-extra": "^3.8",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
