--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -41,6 +41,9 @@ jobs:
         run: |
           mkdir -p data
           touch data/database.sqlite
+      - name: Load Fixtures
+        run: |
+          php bin/console doctrine:fixtures:load
       - name: Execute tests (Unit and Feature tests) via PHPUnit
         env:
           DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
