--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -41,10 +41,11 @@ jobs:
         run: |
           mkdir -p data
           touch data/database.sqlite
-      - name: Load Fixtures
-        run: |
-          php bin/console doctrine:fixtures:load
+      - name: Migrate database
+        run: php bin/console d:m:m --no-interaction --env=test
+      - name: Loading fixtures
+        run: php bin/console d:f:l --no-interaction --env=test
       - name: Execute tests (Unit and Feature tests) via PHPUnit
         env:
-          DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
+          DATABASE_URL: sqlite:///%kernel.project_dir%/data/database_test.sqlite
         run: vendor/bin/phpunit
