--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -41,10 +41,10 @@ jobs:
         run: |
           mkdir -p data
           touch data/database.sqlite
-      - name: Migrate database
+      - name: Update database
         env:
           DATABASE_URL: sqlite:///%kernel.project_dir%/data/database_test.sqlite
-        run: php bin/console make:migration --no-interaction --env=test && php bin/console d:m:m --no-interaction --env=test
+        run: php bin/console doctrine:schema:update --force --env=test
       - name: Loading fixtures
         env:
           DATABASE_URL: sqlite:///%kernel.project_dir%/data/database_test.sqlite
