--- a/composer.json
+++ b/composer.json
@@ -38,10 +38,13 @@
         "symfony/string": "7.0.*",
         "symfony/translation": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
+        "symfony/ux-live-component": "^2.16",
         "symfony/ux-turbo": "^2.14",
+        "symfony/ux-twig-component": "^2.16",
         "symfony/validator": "7.0.*",
         "symfony/web-link": "7.0.*",
         "symfony/yaml": "7.0.*",
+        "symfonycasts/dynamic-forms": "^0.1.2",
         "symfonycasts/reset-password-bundle": "^1.20",
         "symfonycasts/verify-email-bundle": "^1.16",
         "twig/extra-bundle": "^3.8",
