Update styles for marquee links, add user avatar preview functionality, and update default target path in UserAuthenticator.php

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,7 @@ security:
       provider: app_user_provider
       custom_authenticator: App\Security\UserAuthenticator
       # form_login:
+      # default_target_path: app_home
       #   login_path: app_login
       #   check_path: app_login
       #   enable_csrf: true
